--- a/onboarding.specflow-master/MarsQA-1/packages.config
+++ b/onboarding.specflow-master/MarsQA-1/packages.config
@@ -43,6 +43,7 @@
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.8.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.8.0" targetFramework="net461" />
+  <package id="Microsoft.CodeCoverage" version="17.0.0" targetFramework="net461" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net461" />
@@ -69,6 +70,7 @@
   <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.NET.Test.Sdk" version="17.0.0" targetFramework="net461" />
   <package id="MongoDB.Bson" version="2.10.0" targetFramework="net461" />
   <package id="MongoDB.Driver" version="2.10.0" targetFramework="net461" />
   <package id="MongoDB.Driver.Core" version="2.10.0" targetFramework="net461" />
